--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "page-screenshotter",
+  "name": "page-screenshot-service",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
@@ -15,7 +14,6 @@
     "eslint": "^6.8.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "author": "",
